namespace DriverAndVehicleLicenseDepartment;

public class Fees {}