namespace DriverAndVehicleLicenseDepartment;

public class RequestTypes {}